syntax = "proto3";
package raftRpcProctoc;
option cc_generic_services = true;  

message LogEntry{
    bytes Command  =1;
	int32 LogTerm   =2;
	int32 LogIndex  = 3;
}

message AppendEntriesArgs  {
	int32 Term        =1;
	int32 LeaderId       =2;
	int32 PrevLogIndex =3;
	int32 PrevLogTerm  =4;
	repeated LogEntry Entries  = 5;
	int32 LeaderCommit  = 6;
}

message AppendEntriesReply {
	int32 Term =1;             
	bool Success      =2;
	int32 UpdateNextIndex = 3;               
	int32 AppState        =4; 
}

message RequestVoteArgs  {
	int32 Term         =1;
	int32 CandidateId  =2;
	int32 LastLogIndex =3;
	int32 LastLogTerm  =4;
}

message RequestVoteReply  {
	int32 Term        =1;
	bool VoteGranted  =2;
	int32 VoteState   =3;
}

message InstallSnapshotRequest  {
	int32 LeaderId                 =1;
	int32 Term                     =2;
	int32 LastSnapShotIncludeIndex =3;
	int32 LastSnapShotIncludeTerm  =4;
	bytes Data                     =5;
}

message InstallSnapshotResponse  {
	int32 Term  = 1;
}

service raftRpc  
{
    rpc AppendEntries(AppendEntriesArgs) returns(AppendEntriesReply);
    rpc InstallSnapshot (InstallSnapshotRequest) returns (InstallSnapshotResponse);
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply);
}























